GL/Projet_GL/src/test/deca/context/valid/sansObjet/bool/valid_boolean_not_equals.deca
// Test : valid_not_equals_operator
// But : autoriser l’opérateur != entre entiers.
// Couvre : opérateur de comparaison.
// Résultat attendu : programme valide.

{
    boolean b;
    b = 3 != 4;
}